// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxInput /> should render a checkbox input with a component as the label 1`] = `
<styled.div>
  <div
    className="checkbox-input checkboxInput"
  >
    <styled.input
      checked={false}
      className="input "
      data-component-type="checkbox_input"
      disabled={false}
      id="test-jsx-input"
      name="test-jsx-input"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="checkbox"
      htmlFor="test-jsx-input"
    >
      <Memo(FontAwesomeIcon)
        icon="star"
        type="solid"
      />
    </label>
  </div>
</styled.div>
`;

exports[`<CheckboxInput /> should render a checkbox input with button 1`] = `
<styled.div>
  <div
    className="checkbox-input checkboxInput"
  >
    <styled.input
      checked={false}
      className="input "
      data-component-type="checkbox_input"
      disabled={false}
      id="test-button-input"
      name="test-button-input"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="checkbox checkbox-button"
      htmlFor="test-button-input"
    >
      Hey I am a test string
    </label>
  </div>
</styled.div>
`;

exports[`<CheckboxInput /> should render a checkbox input without button 1`] = `
<styled.div>
  <div
    className="checkbox-input checkboxInput"
  >
    <styled.input
      checked={false}
      className="input "
      data-component-type="checkbox_input"
      disabled={false}
      id="test-input"
      name="test-input"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="checkbox"
      htmlFor="test-input"
    >
      Hey I am a test string
    </label>
  </div>
</styled.div>
`;

exports[`<CheckboxInput /> should render a checked checkbox input without button 1`] = `
<styled.div>
  <div
    className="checkbox-input checkboxInput"
  >
    <styled.input
      checked={true}
      className="input "
      data-component-type="checkbox_input"
      disabled={false}
      id="test-input"
      name="test-input"
      onChange={[Function]}
      type="checkbox"
      value="true"
    />
    <label
      className="checkbox"
      htmlFor="test-input"
    >
      Hey I am a test string
    </label>
  </div>
</styled.div>
`;
